@@ -53,10 +53,10 @@
       <td style="white-space:nowrap;"><%= link_to sticky.owner.nickname if sticky.owner %></td>
       <td>
         <table class="blank padded tags">
-        <% sticky.old_tags.in_groups_of(5).each do |row_tags| %>
+        <% sticky.tags.in_groups_of(5).each do |row_tags| %>
           <tr>
             <% row_tags.each do |tag| %>
-              <% if tag %><td><div><%= tag %></div></td><% end %>
+              <% if tag %><td><%= @tag = tag; render partial: 'tags/show' %></td><% end %>
             <% end %>
           </tr>
         <% end %>
