@@ -56,14 +56,14 @@
   <%= @sticky.start_date %> to <%= @sticky.end_date %>
 </p>
 
-<% if @sticky.old_tags.size > 0 %>
+<% if @sticky.tags.size > 0 %>
 <p>
   <b>Tags:</b>
   <table class="blank tags">
-    <% @sticky.old_tags.in_groups_of(5).each do |row_tags| %>
+    <% @sticky.tags.in_groups_of(5).each do |row_tags| %>
       <tr>
         <% row_tags.each do |tag| %>
-          <% if tag %><td><div><%= tag %></div></td><% end %>
+          <% if tag %><td><%= @tag = tag; render partial: 'tags/show' %></td><% end %>
         <% end %>
       </tr>
     <% end %>
