@@ -1,0 +1,1 @@
+<div class="tag_bubble" style="white-space:nowrap;display:inline;background-color: <%= @tag.color %>"><%= @tag.name %></div>
