@@ -12,7 +12,7 @@
   </tr>
   <tr>
     <td colspan="3" style="padding:0px 10px 10px 10px">
-      <% if @sticky.old_tags.size > 0 %>Tags: <b><%= @sticky.old_tags.join(', ') %></b><% end %>
+      <% if @sticky.tags.size > 0 %>Tags: <b><%= @sticky.tags.collect{|t| "<span style='background-color: #{t.color}'>"+t.name+"</span>"}.join(', ').html_safe %></b><% end %>
     </td>
   </tr>
 </table>
