@@ -9,7 +9,6 @@ one:
   start_date: 2011-02-24
   end_date: 2011-02-24
   deleted: false
-  old_tags: ['alpha', 'beta', 'gamma']
 
 two:
   user: valid
