@@ -101,6 +101,29 @@ class StickiesControllerTest < ActionController::TestCase
     assert_not_nil assigns(:stickies)
   end
 
+  test "should get index with all selected tags" do
+    get :index, format: 'js', tag_filter: 'all', tag_ids: [ tags(:alpha).to_param, tags(:beta).to_param ], status: ['not completed', 'completed']
+
+    # Should only return stickies(:tagged)
+    assert_not_nil assigns(:stickies)
+    assert_equal 1, assigns(:stickies).size
+    assert_equal stickies(:tagged), assigns(:stickies).first
+
+    assert_template 'index'
+    assert_response :success
+  end
+
+  test "should get index with at least one selected tags" do
+    get :index, format: 'js', tag_filter: 'any', tag_ids: [ tags(:alpha).to_param, tags(:beta).to_param ], status: ['not completed', 'completed']
+    # Should return stickies(:tagged), stickies(:only_alpha), and stickies(:only_beta)
+    assert_not_nil assigns(:stickies)
+    assert_equal 3, assigns(:stickies).size
+    assert_equal [stickies(:only_alpha), stickies(:only_beta), stickies(:tagged)], assigns(:stickies).order('description')
+
+    assert_template 'index'
+    assert_response :success
+  end
+
   test "should get new" do
     get :new
     assert_response :success
@@ -263,10 +286,10 @@ class StickiesControllerTest < ActionController::TestCase
     assert_redirected_to calendar_stickies_path(selected_date: assigns(:sticky).due_date.blank? ? '' : assigns(:sticky).due_date.strftime('%m/%d/%Y'))
   end
 
-  test "should update sticky and remove all old tags" do
+  test "should update sticky and remove all tags" do
     put :update, id: stickies(:tagged).to_param, from_calendar: 1, sticky: { description: "Sticky Tags Removed", project_id: projects(:one).to_param, frame_id: frames(:one).to_param, completed: '0', due_date: "08/15/2011" }
     assert_not_nil assigns(:sticky)
-    assert_equal [], assigns(:sticky).old_tags
+    assert_equal [], assigns(:sticky).tags
     assert_equal "Sticky Tags Removed", assigns(:sticky).description
     assert_equal false, assigns(:sticky).completed
     assert_nil assigns(:sticky).end_date
@@ -277,9 +300,9 @@ class StickiesControllerTest < ActionController::TestCase
   end
 
   test "should update sticky and add tags" do
-    put :update, id: @sticky.to_param, from_calendar: 1, sticky: { description: "Sticky Tags Added", project_id: projects(:one).to_param, frame_id: frames(:one).to_param, completed: '0', due_date: "08/15/2011", old_tags: ['alpha'] }
+    put :update, id: @sticky.to_param, from_calendar: 1, sticky: { description: "Sticky Tags Added", project_id: projects(:one).to_param, frame_id: frames(:one).to_param, completed: '0', due_date: "08/15/2011", tag_ids: [tags(:alpha).to_param] }
     assert_not_nil assigns(:sticky)
-    assert_equal ['alpha'], assigns(:sticky).old_tags
+    assert_equal ['alpha'], assigns(:sticky).tags.collect{|t| t.name}
     assert_equal "Sticky Tags Added", assigns(:sticky).description
     assert_equal false, assigns(:sticky).completed
     assert_nil assigns(:sticky).end_date
